# aoc-2022

./: .gitignore  Cargo.toml  README.md
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: direction.rs  main.rs  point.rs
day10/: Cargo.toml
day10/data/: small.txt
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs  packet.pest  packet.rs  parser.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
