[package]
name = "day07"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10"
